[package]
name = "core"
version = "0.1.0"
authors = ["Casper Rogild Storm"]
edition = "2018"

[dependencies]
thiserror = "1.0"
async-trait = "0.1.50"
async-std = "1.9.0"
futures = "0.3.15"
isahc = { version = "1.4.0", features=[ 'json' ] }
serde = { version = "1.0", features = [ 'derive' ]}
serde_json = "1.0.64"
regex = "1.5.4"